log/build_2024-06-11_22-42-53/adhoc/stdout_stderr.log
running egg_info
writing ../../build/adhoc/adhoc.egg-info/PKG-INFO
writing dependency_links to ../../build/adhoc/adhoc.egg-info/dependency_links.txt
writing entry points to ../../build/adhoc/adhoc.egg-info/entry_points.txt
writing requirements to ../../build/adhoc/adhoc.egg-info/requires.txt
writing top-level names to ../../build/adhoc/adhoc.egg-info/top_level.txt
reading manifest file '../../build/adhoc/adhoc.egg-info/SOURCES.txt'
writing manifest file '../../build/adhoc/adhoc.egg-info/SOURCES.txt'
running build
running build_py
copying adhoc/video_subscriber.py -> /home/greatshuhang/ros2_ws/build/adhoc/build/lib/adhoc
running install
running install_lib
copying /home/greatshuhang/ros2_ws/build/adhoc/build/lib/adhoc/video_subscriber.py -> /home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc
byte-compiling /home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py to video_subscriber.cpython-310.pyc
  File "/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py", line 68
    }
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 67

running install_data
running install_egg_info
removing '/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/adhoc/adhoc.egg-info to /home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc-0.0.0-py3.10.egg-info
running install_scripts
Installing video_publisher script to /home/greatshuhang/ros2_ws/install/adhoc/lib/adhoc
Installing video_subscriber script to /home/greatshuhang/ros2_ws/install/adhoc/lib/adhoc
writing list of installed files to '/home/greatshuhang/ros2_ws/build/adhoc/install.log'
